[tool.poetry]
name = "atomcalc"
version = "0.1.0"
description = ""
authors = ["Moritz Wilke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.5"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
sphinx = "^6.2.1"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
