[tool.poetry]
name = "atomcalc"
version = "0.1.0"
description = ""
authors = ["Moritz Wilke"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.5,<3.12"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
qutip = "^4.7.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.2.1"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.2.0"
nbsphinx = "^0.9.2"
pandoc = "^2.3"
pypandoc = "^1.11"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
